--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /Kozmetika_SERVER/nbproject/private/
 /Kozmetika_ZAJEDNICKI/dist/
 /Kozmetika_SERVER/build/
+/Kozmetika_KLIJENT/nbproject/private/
+/Kozmetika_KLIJENT/build/
